# proyecto_final_ci4321

./: .gitignore  CMakeLists.txt  README.md  main.cpp
fonts/: Peaberry.bmp.xml
models/: firetruck.gltf  firetruck_cannon.gltf  firetruck_turret_mount.gltf
shader_files/: basic.f  basic.frag  basic.v  basic.vert  normalmap.frag  normalmap.vert  particles.frag  particles.vert  screen.fb.frag  screen.fb.vert  skybox.frag  skybox.vert
shader_files/color_triangle/: shader.vert
shader_files/ui/: font.frag  font.vert  ui.basic.frag  ui.vert
src/collisions/: CMakeLists.txt  collision_primitives.cpp  collision_primitives.hpp  physic_engine.cpp  physic_engine.hpp
src/dummy_test/: CMakeLists.txt  dummy_test.cpp  dummy_test.h
src/game/: CMakeLists.txt  bullet.cpp  bullet.hpp  bullet_component.cpp  bullet_component.hpp  firetruck_cannon.cpp  firetruck_cannon.hpp  firetruck_component.cpp  firetruck_component.hpp  obstacle.cpp  obstacle.hpp  speedo_meter_component.cpp  speedo_meter_component.hpp  tank.cpp  tank.hpp
src/game/components/: destroyable_component.cpp  destroyable_component.hpp  obstacle_counter_component.cpp  obstacle_counter_component.hpp
src/gl_utils/: CMakeLists.txt  shader.cpp  shader.h  shader.hpp
src/input/: CMakeLists.txt  input.cpp  input.hpp
src/mesh/: CMakeLists.txt  geometry.cpp  geometry.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp
src/particles/: CMakeLists.txt  emission_shape.cpp  emission_shape.hpp  emission_time.cpp  emission_time.hpp  emitter.cpp  emitter.hpp  particle_emitter.cpp  particle_emitter.hpp  particle_system.cpp  particle_system.hpp
src/physics/: CMakeLists.txt  collider_component.cpp  collider_component.hpp  collision_primitives.cpp  collision_primitives.hpp  physic_engine.cpp  physic_engine.hpp
src/rendering/: CMakeLists.txt  light_component.cpp  light_component.hpp  light_source_type.hpp  lights.hpp  rendering_engine.cpp  rendering_engine.hpp  shadow_engine.cpp  shadow_engine.hpp
src/resource_management/: CMakeLists.txt  resource_loader.hpp  resource_manager.hpp  texture_loader.cpp  texture_loader.hpp
src/scene_graph/: .gitignore  CMakeLists.txt  component.cpp  component.hpp  logic_engine.cpp  logic_engine.hpp  sceneobject.cpp  sceneobject.hpp  transform.cpp  transform.hpp
src/textures/: CMakeLists.txt  texture.cpp  texture.hpp  texture_loader.cpp  texture_loader.hpp
src/ui/: CMakeLists.txt  ui_component.cpp  ui_component.hpp
src/ui/font/: CMakeLists.txt  font_atlas.cpp  font_atlas.hpp  font_component.cpp  font_component.hpp  font_loader.cpp  font_loader.hpp
src/ui/sprites/: CMakeLists.txt  sprite_component.cpp  sprite_component.hpp
textures/: floor.bmp.xml  floor_tiles.bmp.xml  speedo_meter.png.xml
textures/skybox/: cliff.bmp.xml
